# GChain

./: .gitignore  CMakeLists.txt
include/: Block.h  Blockchain.h  Transaction.h
src/: Blockchain.cpp  main.cpp
